user auth documentation added
